<?xml version="1.0" encoding="UTF-8"?>
<!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="app_name">usageDirect</string>
    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="last_used">"Last used %s"</string>
    <string name="time_span">"Time span: "</string>
    <string name="time_used">Time used: %d:%02d:%02d</string>
    <string name="time_used_time_only">%d:%02d:%02d</string>
    <string name="explanation_access_appusage_title">App usage permission</string>
    <string name="explanation_access_appusage_message">Please grant access to your system\'s usage statistics on the next page.</string>
    <string name="go">Go</string>
    <string name="leave_app">Leave app</string>
    <string name="not_used">Not used</string>
    <string name="menu_about">About</string>
    <string name="about_libraries_header">usageDirect is forked from the Android sample AppUsageStatistics and has since been developed further by Fynn Godau.\n\nThe following list displays all components that make up this application.</string>
    <string name="launch_unavailable">Could not launch app</string>
    <string name="menu_charts">Charts</string>
    <string name="span_daily">Daily</string>
    <string name="span_weekly">Weekly</string>
    <string name="span_monthly">Monthly</string>
    <string name="span_yearly">Yearly</string>
    <string name="last_used_now">Currently in use</string>
    <string name="bar_chart_daily">App usage per day</string>
    <string name="bar_chart_weekly">App usage per week</string>
    <string name="bar_chart_monthly">App usage per month</string>
    <string name="bar_chart_yearly">App usage per year</string>
    <string name="charts_clock_pie">%s as a clock pie chart</string>
    <string name="title_feature_preview">usageDirect feature preview</string>
    <string name="ts_today">Today</string>
    <string name="ts_yesterday">Yesterday</string>
    <string name="ts_this_week">This week</string>
    <string name="ts_last_week">Last week</string>
    <string name="ts_calendar_week">Week %s</string>
    <string name="ts_this_month">This month</string>
    <string name="menu_reload">Reload</string>
    <string name="error_no_data">An error occurred: the system has returned no data. Please try restarting the application</string>
    <string name="db_status">At the moment, there are %d days stored in the database, amounting to a total of %dh.</string>
    <string name="menu_database">Database</string>
    <string name="db_insert">Copy up to 10 days into database</string>
    <string name="db_wait">Gathering data…</string>
    <string name="db_feature_announcement">In the next version of usageDirect, the current way to access data will be replaced with a database.
        \n\nIf you like, you can already start filling this database with currently available log data, which is up to 10 days.
    </string>
    <string name="db_feature_announcement_explanation">This decision was made considering the current data source (aggregated data from the Android system) has turned out to be terribly unreliable.
        \n\nIt causes a number of unfixable bugs: sometimes, one application supposedly was in the foreground for multiple days in a row; sometimes the data for one ongoing period is the same as for another when it shouldn\'t; sometimes the system refuses to return any data at all after some time.
        \n\nThis is why future versions of usageDirect will aggregate log data themselves instead of relying on the system to do it.
        \n\nI hope this will lead to a much less frustrating user experience.

    </string>
    <string name="db_feature_announcement_explanation_long">The intent of this application was to make usage statistics that the Android system automatically collects in the background visible and beautiful to look at.
        \n\nIt was not intended to store this usage data – the historic view would be limited to the 10 days, 4 weeks, 6 months and a few years that the Android system itself keeps. Thus, wiping this application\'s data would not have modified what it displays.
        \n\nHowever, it turned out that the aggregated data provided by the system in the four \"buckets\" (daily, weekly, monthly, yearly) was highly unreliable.
        \n\nTo avoid working with this terribly broken structure, I have decided that from the next version on, usageDirect will work just like other usage statistics applications supposedly work as well: it will parse data from the events log (which is also used to draw the new clock pie charts) into an internal database and then periodically fill it up with more recent data. This should hopefully turn out to be much more reliable than the current implementation.
        \n\nIn this version, you can already save and thus \"clock in\" usage time from the events log, which keeps a maximum of 10 days. Then, once the next version is available, this data will become available to you instead of the data aggregated by the system, for example, there might be a daily chart for a period longer than 10 days.
        </string>
    <string name="db_chart_title">App usage by day with data from database</string>
    <string name="db_schedule">Automatic inserts scheduled</string>
    <string name="db_job_schedule_failure">Warning: automatic data collection could not be set up, please check back regularly</string>
    <string name="menu_system_stats">System stats</string>
    <string name="title_system_stats">usageDirect system stats viewer</string>
    <string name="system_stats_warning">This data is displayed exactly as it is output by the Android system. It has turned out to be unreliable.</string>
</resources>
