<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ usageDirect
  ~ Copyright (C) 2020 Fynn Godau
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/db_feature_announcement" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e1f5fe"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#01579b"
                android:text="@string/db_wait"
                android:layout_margin="8dp"/>

            <Button
                android:id="@+id/button_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/db_insert"
                />

            <CheckBox
                android:id="@+id/button_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/db_schedule"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/db_feature_announcement_explanation" />

    </LinearLayout>
</ScrollView>