<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ usageDirect
  ~ Copyright (C) 2020 Fynn Godau
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_charts"
        android:title="@string/menu_charts"
        android:icon="@drawable/ic_chart"
        android:showAsAction="always" />
    <item android:id="@+id/menu_reload"
        android:title="@string/menu_reload"
        android:icon="@drawable/ic_reload"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_feedback"
        android:showAsAction="never"
        android:title="@string/menu_feedback" />
    <item android:id="@+id/menu_about"
        android:title="@string/menu_about" />
</menu>